Add CRUD for price and mycard
