# handlers/price.go
@@ -1,9 +1,13 @@
 package handlers
 
 import (
+	"encoding/json"
+	"log"
 	"net/http"
+	"os"
 
 	"github.com/eesoymilk/health-statistic-api/ent/price"
+	"github.com/eesoymilk/health-statistic-api/types"
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
 )
@@ -56,6 +60,43 @@ func (h *PriceHandler) GetPrice(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, prices)
+}
+
+//	@Summary				Create Price
+//	@Description.markdown	price.post
+//	@Tags					Price
+//	@Accept					json
+//	@Produce				json
+//	@Param					price	body		types.BasePrice	true	"The price to be created"
+//	@Success				200		{object}	ent.Price
+//	@Router					/prices [post]
+func (h *PriceHandler) CreatePrice(c *gin.Context) {
+	var body types.BasePrice
+	if err := c.ShouldBindJSON(&body); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	out, err := json.MarshalIndent(body, "", "  ")
+	if err != nil {
+		log.Fatal(err)
+		os.Exit(1)
+	}
+
+	log.Print(string(out))
+
+	priceNode, err := h.DB.Price.
+		Create().
+		SetName(body.Name).
+		SetDescription(body.Description).
+		Save(c.Request.Context())
+
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, priceNode)
 }
 
 //	@Summary				Delete Price
