# types/mycard.go
@@ -1,0 +1,6 @@
+package types
+
+type BaseMyCard struct {
+	CardNumber   string `json:"card_number"`
+	CardPassword string `json:"card_password"`
+}
