# types/price.go
@@ -1,0 +1,6 @@
+package types
+
+type BasePrice struct {
+	Name        string `json:"name"`
+	Description string `json:"description"`
+}
